new_form.html builds resume by collecting data

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!-- More on helper.js in the class -->
   <script src="js/helper.js"></script>
   <script src="js/navbar.js"></script>
+  <script src="js/formBuilder.js"></script>
 
   <!--
   The next line tells the browser where to download the JavaScript file you'll be
